--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "svix": "^1.44.0",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
